0.6.2-alpha-SNAPSHOT (Nov. 29)
- Deprecated and marked for removal beforeRunCommand and TypeOfEphemeral
- Marked old BotCommandOptions for removal
- Replaced beforeRunCommand/TypeOfEphemeral with CommandHook, enabling pre execution and post execution hooks to run. Logic in BotCommand.processDeferredCommand has been replaced
- Added two default hooks (ratelimit and automatic message deletion [WIP])
- BotCommand.letMessageExpire marked deprecated
- Added post execution hook logic in CommandsHandler
- If a command is inactive, the ratelimit is ignored
- ButtonCommand.runButtonInteraction now returns Optional<?>
- ModalCommand.runModalInteraction now returns Optional<?>